[package]
name = "dnsdist-acme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = "0.7.3"
axum-macros = "0.4.0"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
