[package]
name = "dnsdist-acme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
handlebars = "6.0.0"
serde = { version ="1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tower-http = { version = "0.5.2", features = ["fs", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
